webroot/css/custom.css
div.message.error {
    background-color: #C3232D;
    color: #FFF;
    font-size: 20px;
    padding-left: 1%
}

div.message.success {
    background-color: #23A7C3;
    color: #FFF;
    font-size: 20px;
    padding-left: 1%
}

a {
    color: inherit;
}

.padding-bottom {
    padding-bottom: 50px;
}

.search-container {
    padding-left: 20px;
    padding-top: 20px;
    padding-bottom: 20px;
    text-align: center;
}

.btn-submit {
    float: right;
    margin-right: 1.5%;
    margin-top: 1%;
}

.paginator {
    text-align: center;
}

form .error-message {
    float: right;
    padding-right: 15px;
    color: red;
}

.margin-left {
    margin-left: 15px;
}

.task-status {
    border-radius:20px;
    padding: 5px;
}

.task-status.pending {
    background-color: #5bc0de;
    color: white;
}

.task-status.in-progress {
    background-color: #337ab7;
    color: white;
}

.task-status.done {
    background-color: green;
    color: white;
}

.task-status.overdue {
    background-color: red;
    color: white;
}

.task-status.progress {
    background-color: blue;
    color: white;
}

ul.options {
    list-style-type: none;
    width: 15em;
    margin: 0.3em 0;
    padding: 0;
}

ul.options li {
    background: #def url(../img/cross_bright.png) no-repeat 98% center;
    margin: 1px;
    padding: 0.1em 0.3em;
    cursor: pointer;
    color: #46a;
    font-weight: bold;
    border: solid 1px #cde;
}

.add-button {
    cursor: pointer;
}

.multi-select-with-input table {
    margin: auto;
    table-layout: fixed;
    width: 80%;
    text-align: center;
}

.multi-select-with-input input {
    width: 30%;
    border-radius: 4px;
    box-shadow: 30px;
}

.multi-select-with-input img, .editable-data-table-action img {
    width: 24px;
}

.multi-select-with-input ul {
    margin: 20px auto;
}

tr:last-child .editable-data-table-delete {
    display: none;
}

tr:not(:last-child) .editable-data-table-add {
    display: none;
}

form .chosen-container {
    font-size: 14px;
}

.parent-center {
    text-align: center;
}

.child-center {
    margin-left: 12px;
    display: inline-block;
}

.float-right {
    float: right;
}
 hr.style-eight { 
    padding: 0;
    border: none; 
    border-top: medium double #333; 
    color: #333; 
    text-align: center; 
}
/*hr.style-eight:after { 
    content: "Quick Stats"; 
    display: inline-block; 
    position: relative; 
    top: -0.7em; 
    font-size: 1.5em; 
    padding: 0 0.25em; 
    background: ; 
}*/
hr.style-five { 
    border: 0; 
    height: 0; /* Firefox... */ 
    box-shadow: 
    0 0 10px 1px black; 
}
hr.style-five:after { /* Not really supposed to work, but does */
 content: "\00a0"; /* Prevent margin collapse */ 
}

